src/app/components/topbar/topbar.component.scss
mat-toolbar.mat-toolbar {
  border-bottom-color: var(--mat-card-outlined-outline-color, var(--mat-sys-outline-variant));
  border-bottom-style: solid;
  border-bottom-width: var(--mat-card-outlined-outline-width, 1px);
}

.left-aligned {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin-left: 0.5rem;

  .site-title {
    margin-left: 0.5rem;

    a {
      color: inherit;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }
}

a.sls-logo {
  display: block;
  margin: 0 auto;

  img {
    display: block;
  }
}

.right-aligned {
  display: flex;
  align-items: center;
  gap: 1.25rem;
  margin-right: 0.5rem;

  > div {
    font-size: 1rem;
  }
}

.mat-toolbar-row, .mat-toolbar-single-row {
  justify-content: space-between;
}

a,
::ng-deep .project-chip .mat-mdc-chip-action {
  cursor: pointer;
}

